# linko

./: .gitignore  Cargo.toml  Linko.desktop  README.md
src/: entry.rs  main.rs  style.css  util.rs
