[package]
name = "linko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#adw = { version = "0.2.1", package = "libadwaita" }
adw = { version = "0.3.1", package = "libadwaita" }
#gtk4 = "0.5.5"
#gdk4 = "0.5.5"
gtk4 = "0.6.2"
gdk4 = "0.6.2"

quit = "1.1.4"
